src/test/error/symbol.lns
let _val = 1; // error
fn _func1() { // error
}
fn func2( _val:int ) { // error
}
class _Test { // error
   fn _func() {  // error
   }
}
macro Hoge() {  // error
}
let self = 1; // errorr
let val = 1;
macro _Test() {
   {
      let val2 = val; // error
   }
   print( ,,val2 );
}

print( __func__ );  // error
